docs: updating the credits section so it's a bit clearer when the template is used

--- a/.github/workflows/template-init.yml
+++ b/.github/workflows/template-init.yml
@@ -54,8 +54,11 @@ jobs:
           # Third pass: Update deployment URL to use new owner's GitHub Pages
           sed -i "s|https://www.scottkirvan.com/$NEW_NAME/|https://$NEW_OWNER.github.io/$NEW_NAME/|g" README.md
 
-          # Fourth pass: Restore the original template reference in the credit line
-          sed -i "s|repo generated from \[$NEW_NAME\](https://github.com/$NEW_REPO)|repo generated from [ScooterGitTemplate](https://github.com/ScottKirvan/ScooterGitTemplate)|g" README.md
+          # Fourth pass: Restore the original template reference in the copyright line
+          sed -i "s|\*\*\[$NEW_NAME\](https://github.com/$NEW_REPO) Copyright|**[ScooterGitTemplate](https://github.com/ScottKirvan/ScooterGitTemplate) Copyright|g" README.md
+
+          # Fifth pass: Restore the license line to reference the original template
+          sed -i "s|\*$NEW_NAME is licensed under the \[MIT License\]|\*ScooterGitTemplate is licensed under the [MIT License]|g" README.md
 
           echo "Template initialization complete"
 
