--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,22 +1,5 @@
 blank_issues_enabled: false
-issue_templates:
-  - name: "Bug Report"
-    description: "Report a bug in the system."
-    title: "[Bug]: "
-    labels: ["bug"]
-    body: "./ISSUE_TEMPLATE/bug_report.md"
-  - name: "Feature Request"
-    description: "Propose a new feature or improvement."
-    title: "[Feature]: "
-    labels: ["enhancement"]
-    body: "./ISSUE_TEMPLATE/feature_request.md"
-  - name: "Documentation"
-    description: "Suggest updates or additions to the documentation."
-    title: "[Docs]: "
-    labels: ["documentation"]
-    body: "./ISSUE_TEMPLATE/documentation.md"
-  - name: "General Report"
-    description: "Provide general feedback or inquiries."
-    title: "[General]: "
-    labels: ["general"]
-    body: "./ISSUE_TEMPLATE/general_report.md"
+contact_links:
+  - name: Community Discussion
+    url: https://github.com/Aemulus-XR/AMXR_Report/discussions
+    about: Please ask and answer questions here.
